--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,6 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-
-/* * {
-    outline: 1px solid navajowhite;
-} */
-
 .header {
     position: fixed;
     top: 0;
@@ -44,20 +39,32 @@
     display: none;
 }
 
-.header:hover h1 img {
-    visibility: hidden;
-    background: url(../images/logo_basic.png) no-repeat;
+.header h1 .wh {
+    position: relative;
 }
+
+.header h1 .bs {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    opacity: 0;
+}
+
+.header .header_wrap:hover .bs {
+    display: block;
+    opacity: 1;
+}
+
+.header .header_wrap:hover .wh {
+    opacity: 0;
+}
+
 
 .header .header_wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
-}
-
-.header .header_wrap .gnb {
-    position: relative;
 }
 
 .header .header_wrap .main_menu {
@@ -299,6 +306,8 @@
 .main_slide .itm .slogan p {
     font-size: 18px;
     margin: 0 0 40px 0;
+    width: 430px;
+    line-height: 24px;
 }
 
 .main_slide .itm .slogan .more {
@@ -404,7 +413,9 @@
     color: rgba(255, 255, 255, 0.5);
 }
 
-
+.main_content {
+    background: #f9f9f9;
+}
 
 .main_content .content {
     max-width: 1450px;
@@ -424,7 +435,9 @@
     position: relative;
     font-size: 24px;
     font-weight: 800;
+    color: var(--blc);
     padding: 0 2px;
+    cursor: pointer;
 }
 
 .main_content .tab_box .tab_list ul::before {
@@ -439,7 +452,9 @@
 }
 
 .main_content .tab_box .tab_list ul li.on {
+    position: relative;
     color: var(--pc);
+    z-index: 1;
 }
 
 .main_content .tab_box .tab_list ul li.on::before {
@@ -690,11 +705,9 @@
 
 .main_news {
     position: relative;
+    background: #f9f9f9;
 }
 
-/* .main_news .content {
-    max-width: 1450px;
-} */
 
 .main_news .news_tit {
     display: flex;
@@ -731,7 +744,7 @@
 .main_news .news_tit .sns_btn a {
     padding: 16px 16px 14px 16px;
     border-radius: 15px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .main_news .news_tit .sns_btn i {
@@ -775,7 +788,6 @@
     position: relative;
     border-radius: 25px;
     margin: 0 0 20px 0;
-    border: 5px solid var(--lc);
 }
 
 .main_news .news_box .itm span {
@@ -838,6 +850,7 @@
     margin: 0 0 0 16px;
 }
 
+
 .main_search .content {
     text-align: center;
 }
@@ -875,7 +888,7 @@
     transform: translate(-50%, -50%);
     font-size: 24px;
     color: var(--btn);
-    z-index: 999;
+    z-index: 9;
 }
 
 .main_search .content .word {
@@ -888,6 +901,11 @@
 .main_search .content .word strong {
     font-size: 18px;
     font-weight: 800;
+}
+
+.main_search .content .word .key {
+    display: flex;
+    gap: 30px;
 }
 
 .main_search .content .word a {
@@ -909,7 +927,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .footer .top .content ul {
@@ -918,6 +935,12 @@
     gap: 30px;
 }
 
+.footer .top .content .btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
 
 .footer .top .content ul .bold {
     font-weight: 600;
@@ -1076,7 +1099,7 @@ footer .top .content .fml .btn_l .fml_inner .box::-webkit-scrollbar-thumb {
 }
 
 .footer .bot .ntc {
-    text-align: end;
+    text-align: right;
 }
 
 .footer .bot .ntc span {
@@ -1091,4 +1114,468 @@ footer .top .content .fml .btn_l .fml_inner .box::-webkit-scrollbar-thumb {
     background: var(--box);
     border-radius: 15px;
     padding: 8px 20px;
+}
+
+.to_top {
+    position: fixed;
+    bottom: 5%;
+    right: 3%;
+}
+
+.to_top i {
+    padding: 14px;
+    border-radius: 50%;
+    font-size: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.13);
+}
+
+@media (max-width:768px) {
+    .header {
+        background: #fff;
+        border-bottom: 1px solid var(--lc);
+    }
+
+    .header.on {
+        position: fixed;
+    }
+
+    .header.on .header_wrap {
+        display: flex;
+    }
+
+
+    .header h1 .wh {
+        display: none;
+    }
+
+    .header h1 .bs {
+        opacity: 1;
+    }
+
+    .header .header_wrap:hover .bs {
+        display: absolute;
+    }
+
+
+    .header .header_wrap {
+        height: 80px;
+    }
+
+    .header .header_wrap .gnb {
+        position: fixed;
+        top: 0;
+        right: 0;
+        transform: translate(100%, 0);
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        transition: 0.5s;
+        overflow-y: scroll;
+        z-index: 999;
+    }
+
+    .header .header_wrap .gnb.on {
+        transform: translate(0, 0);
+    }
+
+
+    .header .header_wrap .main_menu {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 0;
+        padding: 100px 40px 50px 40px;
+    }
+
+    .header .header_wrap .main_menu li {
+        color: #000;
+        width: 100%;
+        line-height: 10px;
+    }
+
+
+    .header .header_wrap .main_menu li::before {
+        display: none;
+    }
+
+    .header .header_wrap .main_menu li a {
+        display: block;
+        border-bottom: 1px solid #000;
+        line-height: 4;
+    }
+
+    .header .header_wrap .main_menu li:hover {
+        color: #000;
+    }
+
+
+    .header .header_wrap .main_menu li~li {
+        margin: 0 0 0 0;
+    }
+
+
+    .header .gnb>ul>li .sub_menu {
+        position: static;
+        display: none;
+        flex-direction: column;
+        padding: 0 0 0 0;
+    }
+
+    .header .gnb>ul>li:hover .sub_menu {
+        display: none;
+    }
+
+    .header .header_wrap:hover .gnb .sub_menu dt {
+        background-color: var(--box);
+        width: 100%;
+    }
+
+    .header .header_wrap .gnb .sub_menu dt a {
+        border-bottom: none;
+        padding: 0 0 0 15px;
+    }
+
+
+    .header .header_wrap .gnb .bg {
+        position: relative;
+        top: auto;
+        height: 100%;
+        padding: 0 40px;
+    }
+
+    .header .header_wrap:hover .gnb .bg {
+        height: 500px;
+        border-top: 1px solid var(--lc);
+    }
+
+
+    .header .header_wrap .gnb .bg .bg_inner {
+        flex-direction: column;
+        padding: 50px 0;
+    }
+
+    .header .header_wrap .gnb .bg .bg_inner figure {
+        padding: 0 0 0 0;
+        width: 100%;
+    }
+
+
+    .header .header_wrap .bg_inner .etc {
+        width: 100%;
+        border-top: 1px solid var(--lc);
+        border-right: 1px solid var(--lc);
+    }
+
+    .header .header_wrap .bg_inner .etc .customer {
+        display: flex;
+        border-bottom: 1px solid var(--lc);
+    }
+
+
+    .header .header_wrap .search {
+        color: #000;
+        background: #fff;
+    }
+
+    .header .header_wrap .search .glb {
+        z-index: 1;
+    }
+
+    .header .header_wrap .search .glb .lan li {
+        font-size: 16px;
+    }
+
+    .header .header_wrap .search .glb .lan li~li {
+        margin: 20px 0 0 0;
+    }
+
+    .header .header_wrap .search .sch {
+        margin: 0 24px 0 24px;
+    }
+
+    .mobile_btn {
+        transition: 0.2s;
+    }
+
+    .mobile_btn.on {
+        position: relative;
+        transform: rotate(180deg);
+        z-index: 999;
+    }
+
+    .main_slide .itm video {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+    }
+
+    .main_slide .itm .slogan {
+        top: auto;
+        bottom: 0;
+        left: auto;
+        transform: translate(0, 0);
+        height: 220px;
+        width: 100%;
+        padding: 40px 20px 30px 20px;
+    }
+
+    .main_slide .itm .slogan strong {
+        font-size: 28px;
+        width: 100%;
+        margin: 0 0 18px 0;
+    }
+
+    .main_slide .itm .slogan p {
+        font-size: 14px;
+        margin: 0 0 32px 0;
+        width: 100%;
+    }
+
+    .main_slide .itm .slogan .more::before {
+        margin: 0 0 0 60px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+    }
+
+    .main_visual .arrows {
+        top: auto;
+        bottom: 28%;
+        right: 15px;
+        left: auto;
+        font-size: 14px;
+    }
+
+    .main_content {
+        background: #f9f9f9;
+    }
+
+    .main_content .content {
+        max-width: 1440px;
+    }
+
+    .main_content .tab_box .tab_list {
+        padding: 0;
+    }
+
+    .main_content .tab_box .tab_list ul li {
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+        padding: 0;
+        width: 100%;
+    }
+
+    .main_content .tab_box .tab_list ul::before {
+        display: none;
+    }
+
+    .main_content .tab_box .tab_list ul li::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--bpc);
+        transition: 0.5s;
+        z-index: -1;
+    }
+
+    .main_content .tab_box .tab_list ul li.on::before {
+        height: 30%;
+    }
+
+    .main_content .tab_box .tab_list ul li~li {
+        margin: 0 0 0 30px;
+    }
+
+    .main_content .tab_box .tab_inner .title {
+        font-size: 20px;
+        line-height: 28px;
+        padding: 0;
+    }
+
+    .main_content .tab_box .tab_inner .tit01 {
+        width: 100%;
+    }
+
+    .main_content .tab_box .tab_inner ul .tab01 {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 8px;
+    }
+
+    .main_content .tab_box .tab_inner .tab01 .right {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .main_content .tab_box .tab_inner .tab01 .itm dt~dt {
+        margin: 24px 0 0 0;
+    }
+
+    .main_content .tab_box .tab_inner .tab01 .itm dt~dt::before {
+        margin: -14px 0 0 0;
+    }
+
+    .main_content .tab_box .tab_inner .tab01 .itm01 {
+        padding: 30px 0 34px 0;
+    }
+
+    .main_content .tab_box .tab_inner .tab01 .itm01 strong {
+        margin: 0 0 24px 0;
+    }
+
+    .main_content .tab_box .tab_inner .center {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .main_business .tit p {
+        font-size: 20px;
+        line-height: 28px;
+        width: 100%;
+    }
+
+    .main_business .img_box {
+        flex-direction: column;
+    }
+
+    .main_business .img_box .box figure {
+        height: 250px;
+    }
+
+    .main_business .img_box .box .txt a {
+        font-size: 20px;
+        padding: 20px;
+    }
+
+    .main_news .news_tit .tit p {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    .main_news .news_tit .sns_btn {
+        display: none;
+    }
+
+
+    .main_news .news_box .itm {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .main_search .content .tit h2 {
+        font-size: 36px;
+    }
+
+    .main_search .content .search input {
+        font-size: 18px;
+        width: 100%;
+        padding: 12px 25px;
+        border-radius: 15px;
+    }
+
+    .main_search .content .search i {
+        right: 3%;
+        z-index: 9;
+    }
+
+    .main_search .content .word {
+        flex-direction: column;
+    }
+
+    .main_search .content .word .key {
+        justify-content: center;
+        gap: 6px;
+        width: 100%;
+    }
+
+    .main_search .content .word a {
+        padding: 8px 12px;
+        border-radius: 25px;
+        width: 100%;
+    }
+
+    .footer .top .content {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+
+    .footer .top .content ul {
+        display: block;
+    }
+
+    .footer .top .content ul li {
+        display: inline-block;
+        line-height: 2.2;
+        font-size: 15px;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .footer .top .content .btns {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 0;
+        margin: 24px 0 0 0;
+    }
+
+    .footer .top .content ul .bold {
+        margin: 0 30px 0 0;
+    }
+
+    .footer .top .content ul .center {
+        margin: 0 25px 0 25px;
+    }
+
+    .footer .top .content ul .btn.c {
+        margin: 0 15px 0 15px;
+    }
+
+    .footer .top .content .fml {
+        order: -1;
+        width: 100%;
+        margin: 0 0 30px 0;
+    }
+
+    .footer .top .content .fml .btn_l {
+        display: flex;
+        width: 100%;
+    }
+
+    .footer .top .content .fml .btn_l p {
+        width: 100%;
+    }
+
+
+    .footer .top .content .fml .btn_l i {
+        transform: rotate(180deg);
+    }
+
+
+    .footer .top .content .fml .btn_l.on i {
+        transform: rotate(0);
+    }
+
+    footer .top .content .fml .btn_l .fml_inner {
+        bottom: auto;
+        top: 50px;
+    }
+
+    .footer .bot .content {
+        flex-direction: column;
+        line-height: 1.3;
+    }
+
+    .footer .bot .ntc {
+        text-align: left;
+    }
+
+    .footer .bot .ntc span {
+        font-size: 14px;
+    }
+
+    .to_top {
+        display: none;
+    }
 }
